# CPP_Template

./: CMakeLists.txt  README.md
.github/workflows/: documentation.yml  examples.yml
docs/: CMakeLists.txt  Doxyfile
docs/pages/: about.dox
examples/: CMakeLists.txt
examples/src/: main.cpp
include/PROJ_NAME/: PROJ_NAME.h
src/: PROJ_NAME.cpp
test/: CMakeLists.txt
test/src/: PROJ_NAME.cpp
